--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "psr-4": {"Byng\\": "src/Byng"}
     },
     "scripts": {
-        "post-package-install": "Byng\\PimcoreDoctrine\\Composer\\CliManager::postPackageInstall"
+        "post-install-cmd": "Byng\\PimcoreDoctrine\\Composer\\CliManager::postInstall",
+        "post-update-cmd": "Byng\\PimcoreDoctrine\\Composer\\CliManager::postInstall"
     }
 }
