--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "doctrine/orm": "*",
-        "doctrine/migrations": "1.0.0"
+        "doctrine/orm": "*"
     },
     "autoload": {
         "psr-4": {"Byng\\": "src/Byng"}
